@@ -349,24 +349,24 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 comment|/*     query rewriting for NUM_DOCS_PER_TYPE terms should take less      time than this. Keeping it at 5 because the delaying search component delays all requests      by at 1 second.      */
-name|long
+name|int
 name|fiveSeconds
 init|=
-literal|5000L
+literal|5000
 decl_stmt|;
-name|Long
+name|Integer
 name|timeAllowed
 init|=
 name|TestUtil
 operator|.
-name|nextLong
+name|nextInt
 argument_list|(
 name|random
 argument_list|()
 argument_list|,
 name|fiveSeconds
 argument_list|,
-name|Long
+name|Integer
 operator|.
 name|MAX_VALUE
 argument_list|)
@@ -406,14 +406,14 @@ name|timeAllowed
 operator|=
 name|TestUtil
 operator|.
-name|nextLong
+name|nextInt
 argument_list|(
 name|random
 argument_list|()
 argument_list|,
 name|fiveSeconds
 argument_list|,
-name|Long
+name|Integer
 operator|.
 name|MAX_VALUE
 argument_list|)
@@ -435,24 +435,24 @@ argument_list|()
 argument_list|)
 argument_list|)
 expr_stmt|;
+comment|// negative timeAllowed should disable timeouts
 name|timeAllowed
 operator|=
 name|TestUtil
 operator|.
-name|nextLong
+name|nextInt
 argument_list|(
 name|random
 argument_list|()
 argument_list|,
-name|Long
+name|Integer
 operator|.
 name|MIN_VALUE
 argument_list|,
 operator|-
-literal|1L
+literal|1
 argument_list|)
 expr_stmt|;
-comment|// negative timeAllowed should disable timeouts
 name|assertSuccess
 argument_list|(
 name|params
