@@ -116,7 +116,39 @@ name|common
 operator|.
 name|params
 operator|.
+name|CommonParams
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|params
+operator|.
 name|ModifiableSolrParams
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|params
+operator|.
+name|SolrParams
 import|;
 end_import
 
@@ -1138,6 +1170,27 @@ name|skipped
 init|=
 literal|null
 decl_stmt|;
+name|long
+name|timeAllowedNano
+init|=
+name|getTimeAllowedInNanos
+argument_list|(
+name|req
+operator|.
+name|getRequest
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|long
+name|timeOutTime
+init|=
+name|System
+operator|.
+name|nanoTime
+argument_list|()
+operator|+
+name|timeAllowedNano
+decl_stmt|;
 for|for
 control|(
 name|String
@@ -1149,6 +1202,18 @@ name|getServers
 argument_list|()
 control|)
 block|{
+if|if
+condition|(
+name|isTimeExceeded
+argument_list|(
+name|timeAllowedNano
+argument_list|,
+name|timeOutTime
+argument_list|)
+condition|)
+block|{
+break|break;
+block|}
 name|serverStr
 operator|=
 name|normalize
@@ -1297,6 +1362,18 @@ range|:
 name|skipped
 control|)
 block|{
+if|if
+condition|(
+name|isTimeExceeded
+argument_list|(
+name|timeAllowedNano
+argument_list|,
+name|timeOutTime
+argument_list|)
+condition|)
+block|{
+break|break;
+block|}
 name|ex
 operator|=
 name|doRequest
@@ -2055,6 +2132,24 @@ name|justFailed
 init|=
 literal|null
 decl_stmt|;
+name|long
+name|timeAllowedNano
+init|=
+name|getTimeAllowedInNanos
+argument_list|(
+name|request
+argument_list|)
+decl_stmt|;
+name|long
+name|timeOutTime
+init|=
+name|System
+operator|.
+name|nanoTime
+argument_list|()
+operator|+
+name|timeAllowedNano
+decl_stmt|;
 for|for
 control|(
 name|int
@@ -2070,6 +2165,18 @@ name|attempts
 operator|++
 control|)
 block|{
+if|if
+condition|(
+name|isTimeExceeded
+argument_list|(
+name|timeAllowedNano
+argument_list|,
+name|timeOutTime
+argument_list|)
+condition|)
+block|{
+break|break;
+block|}
 name|int
 name|count
 init|=
@@ -2214,6 +2321,18 @@ control|)
 block|{
 if|if
 condition|(
+name|isTimeExceeded
+argument_list|(
+name|timeAllowedNano
+argument_list|,
+name|timeOutTime
+argument_list|)
+condition|)
+block|{
+break|break;
+block|}
+if|if
+condition|(
 name|wrapper
 operator|.
 name|standard
@@ -2354,6 +2473,82 @@ name|ex
 argument_list|)
 throw|;
 block|}
+block|}
+comment|/**    * @return time allowed in nanos, returns -1 if no time_allowed is specified.    */
+DECL|method|getTimeAllowedInNanos
+specifier|private
+name|long
+name|getTimeAllowedInNanos
+parameter_list|(
+specifier|final
+name|SolrRequest
+name|req
+parameter_list|)
+block|{
+name|SolrParams
+name|reqParams
+init|=
+name|req
+operator|.
+name|getParams
+argument_list|()
+decl_stmt|;
+return|return
+name|reqParams
+operator|==
+literal|null
+condition|?
+operator|-
+literal|1
+else|:
+name|TimeUnit
+operator|.
+name|NANOSECONDS
+operator|.
+name|convert
+argument_list|(
+name|reqParams
+operator|.
+name|getInt
+argument_list|(
+name|CommonParams
+operator|.
+name|TIME_ALLOWED
+argument_list|,
+operator|-
+literal|1
+argument_list|)
+argument_list|,
+name|TimeUnit
+operator|.
+name|MILLISECONDS
+argument_list|)
+return|;
+block|}
+DECL|method|isTimeExceeded
+specifier|private
+name|boolean
+name|isTimeExceeded
+parameter_list|(
+name|long
+name|timeAllowedNano
+parameter_list|,
+name|long
+name|timeOutTime
+parameter_list|)
+block|{
+return|return
+name|timeAllowedNano
+operator|>
+literal|0
+operator|&&
+name|System
+operator|.
+name|nanoTime
+argument_list|()
+operator|>
+name|timeOutTime
+return|;
 block|}
 comment|/**    * Takes up one dead server and check for aliveness. The check is done in a roundrobin. Each server is checked for    * aliveness once in 'x' millis where x is decided by the setAliveCheckinterval() or it is defaulted to 1 minute    *    * @param zombieServer a server in the dead pool    */
 DECL|method|checkAZombieServer
